cabal-version:       3.4
name:                haskell-wayland
version:             0.1.0.1
synopsis:            Haskell bindings for the C Wayland library.
description:         This package contains bindings to the Wayland library, which is used to interface display devices, drawable clients, and window managers.
                     .
                     Wayland exposes a fixed set of functions, and additionally generates a (large) part of its API from a _protocol_ file using Template Haskell.
                     This package locates that protocol file using @pkg-config@.
                     .
                     If you want to interface with other protocols (such as Weston's), refer to the readme for instructions.
license:             MIT
license-file:        LICENSE
author:              Auke Booij
maintainer:          auke@tulcod.com
-- copyright:
category:            Graphics
build-type:          Simple
extra-source-files:  README.md, NOTES.md

source-repository head
  type:     git
  location: https://github.com/granolaonicecream/haskell-wayland

library
  exposed-modules:
    Graphics.Wayland,
    Graphics.Wayland.Client,
    Graphics.Wayland.Server,
    Graphics.Wayland.Scanner
  other-modules:
    Graphics.Wayland.Internal,
    Graphics.Wayland.Internal.Client,
    Graphics.Wayland.Internal.Cursor,
    Graphics.Wayland.Internal.EGL,
    Graphics.Wayland.Internal.ServerClientState,
    Graphics.Wayland.Internal.Server,
    Graphics.Wayland.Internal.Util,
    Graphics.Wayland.Internal.Version,
    Graphics.Wayland.Internal.SpliceClient,
    Graphics.Wayland.Internal.SpliceServer,
    Graphics.Wayland.Internal.SpliceClientTypes,
    Graphics.Wayland.Internal.SpliceServerTypes,
    Graphics.Wayland.Internal.SpliceClientInternal,
    Graphics.Wayland.Internal.SpliceServerInternal,
    Graphics.Wayland.Scanner.Marshaller,
    Graphics.Wayland.Scanner.Names,
    Graphics.Wayland.Scanner.Protocol,
    Graphics.Wayland.Scanner.Types
  build-depends:
    base >=4.20.0.0,
    xml >= 1.3 && < 1.4,
    process >= 1.1 && < 2,
    template-haskell >= 2 && < 3,
    data-flags <0.1,
    time ^>=1.12,
    transformers ^>= 0.6.1
  build-tool-depends: c2hs:c2hs
  default-extensions:  ForeignFunctionInterface
  -- hs-source-dirs:
  default-language:    GHC2024
  cc-options: -fPIC
  -- ghc-options: -ddump-splices
  pkgconfig-depends:
    wayland-client,
    wayland-cursor,
    wayland-egl,
    wayland-server
  includes:
    wayland-client.h,
    wayland-server.h,
    wayland-client-protocol.h,
    wayland-server-protocol.h,
    wayland-util.h,
    wayland-version.h,
    wayland-egl.h

-- FIXME: this tests assumes there's a wayland server (e.g. weston) running.
test-suite firsttest
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  main-is: test.hs
  build-depends: base, haskell-wayland, xml, process
  default-language:    GHC2024

test-suite enumtest
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  main-is: enums.hs
  build-depends: base, haskell-wayland, xml, process
  default-language:    GHC2024

executable wayland-list-globals
  hs-source-dirs: tests
  main-is: listglobals.hs
  build-depends: base, haskell-wayland
  default-language: GHC2024
